# amblor-backend

./: .deepsource.toml  .gitignore  .pylintrc  Dockerfile  Pipfile  Procfile  README.md  app.json  app.py  build.gradle.kts  db.py  gradle.properties  local.properties  models.py  pyproject.toml  requirements.txt  settings.gradle.kts  spotify.py
.github/workflows/: main.yml
androidApp/: build.gradle.kts
androidApp/src/main/: AndroidManifest.xml
androidApp/src/main/java/com/vanpra/scrobbler/: MainActivity.kt
androidApp/src/main/java/com/vanpra/scrobbler/ui/: Color.kt  Shape.kt  Theme.kt  Type.kt
androidApp/src/main/res/values/: colors.xml  themes.xml
androidApp/src/main/res/values-night/: themes.xml
backend/: app.py
backend/modules/: lastfm.py  mongodb.py  spotify.py
backend/tests/: lastfm_test.py
backend/tests/res/: lastfm_samples.json
gradle/wrapper/: gradle-wrapper.properties
modules/: lastfm.py  models.py  mongodb.py  spotify.py  util.py
server/: app.py  pyproject.toml
server/modules/: firestore.py  models.py  mongodb.py  mysql.py  queries.py  spotify.py  util.py
server/server/modules/: models.py
shared/: build.gradle.kts
shared/src/main/: AndroidManifest.xml
src/main/kotlin/: AmblorAppModule.kt  DatabaseFactory.kt  DatabaseRepository.kt  Entities.kt  Server.kt  SpotifyRepository.kt  Tables.kt
src/main/kotlin/db/: DatabaseFactory.kt  DatabaseRepository.kt  Entities.kt  Tables.kt
src/main/kotlin/models/: AmblorApiModels.kt
src/main/kotlin/utils/: SpotifyRepository.kt
tests/: lastfm_test.py
