[tool.poetry]
name = "Amblor"
version = "0.1.0"
description = "A server for music scrobbling"
authors = ["Pranav Maganti <pranav.maganti@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.24.0"
pylast = "^3.3.0"
spotipy = "^2.13.0"
dataclasses-json = "^0.5.1"
aiohttp = "^3.6.2"
fastapi = "^0.60.0"
uvicorn = "^0.11.6"
google-cloud-firestore = "^1.8.1"
pymongo = "^3.10.1"
bcrypt = "^3.1.7"
dnspython = "^2.0.0"
passlib = "^1.7.2"
pyjwt = "^1.7.1"
async-spotify = "^0.3.1"
google-auth = "^1.19.2"
firebase-admin = "^4.3.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
